--- a/ScrollPager/build.gradle
+++ b/ScrollPager/build.gradle
@@ -33,30 +33,28 @@ android {
     resourcePrefix 'scp_'
 }
 
-//afterEvaluate {
-//    publishing {
-//        publications {
-//            // Creates a Maven publication called "release".
-//            release(MavenPublication) {
-//                // Applies the component for the release build variant.
-//                from components.java
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                // Applies the component for the release build variant.
+                from components.release
+
+                // You can then customize attributes of the publication as shown below.
+                groupId = 'com.github.djawnstj'
+                artifactId = 'ScrollPager'
+                version = '1.0.04-SNAPSHOT'
+            }
+            // Creates a Maven publication called “debug”.
+//            debug(MavenPublication) {
+//                // Applies the component for the debug build variant.
+//                from components.debug
 //
-//                // You can then customize attributes of the publication as shown below.
 //                groupId = 'com.github.djawnstj'
-//                artifactId = ''
+//                artifactId = 'final-debug'
 //                version = '1.0.2'
 //            }
-//        }
-//    }
-//}
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            groupId = 'org.github.djawnstj'
-            artifactId = ''
-            version = '1.0.22'
-
-//            from components.java
         }
     }
 }
