--- a/ScrollPager/build.gradle
+++ b/ScrollPager/build.gradle
@@ -44,17 +44,8 @@ afterEvaluate {
                 // You can then customize attributes of the publication as shown below.
                 groupId = 'com.github.djawnstj'
                 artifactId = 'ScrollPager'
-                version = '1.0.05-SNAPSHOT'
+                version = '1.0.2'
             }
-            // Creates a Maven publication called “debug”.
-//            debug(MavenPublication) {
-//                // Applies the component for the debug build variant.
-//                from components.debug
-//
-//                groupId = 'com.github.djawnstj'
-//                artifactId = 'final-debug'
-//                version = '1.0.2'
-//            }
         }
     }
 }
